buildscript {
	ext {
		rootGradleDir = "${rootProject.rootDir}/gradle"
	}
}

plugins {
	id "com.github.spotbugs" version "4.7.0"
}

apply plugin:'java'
apply plugin:'groovy'
apply plugin:'idea'
apply plugin:'application'
apply plugin:'maven-publish'
apply plugin:'signing'
apply plugin: 'com.github.spotbugs'

group = "com.github.hschneid"
archivesBaseName = 'xflp'
version = '0.3.1'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
 
repositories {
    mavenCentral()
}

mainClassName = 'util.Application'

// In this section you declare the dependencies for your production and test code
dependencies {
	// Logging
	implementation 'org.slf4j:slf4j-api:1.7.21'
	// GZip compressor
	implementation 'org.apache.commons:commons-compress:1.20'
	// Random generator
	implementation 'colt:colt:1.2.0'
	// Fancy collection
	implementation 'com.google.guava:guava:28.2-jre'

	testImplementation "org.spockframework:spock-core:2.0-M4-groovy-3.0"

	spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.11.0'
	spotbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:7.4.7'
}

// Maven - Publish
task javadocJar(type: Jar) {
	archiveClassifier.set('javadoc')
	from javadoc
}

task sourcesJar(type: Jar) {
	archiveClassifier.set("sources")
	from sourceSets.main.allSource
}

task mainJar(type: Jar) {
	with jar
}

publishing {
	publications {
		maven(MavenPublication) {
			artifact mainJar
			artifact sourcesJar
			artifact javadocJar

			pom {
				name = 'XFLP'
				packaging 'jar'
				// optionally artifactId can be defined here
				description = 'Solver for realistic 3D container loading'
				url = 'https://github.com/hschneid/xflp'

				scm {
					connection = 'scm:git:git://github.com/hschneid/xflp.git'
					developerConnection = 'scm:git:ssh://github.com/hschneid/xflp.git'
					url = 'https://github.com/hschneid/xflp'
				}

				licenses {
					license {
						name = 'MIT License'
						url = 'http://www.opensource.org/licenses/mit-license.php'
					}
				}

				developers {
					developer {
						id = 'hschneid'
						name = 'Holger Schneider'
						email = 'holger.schneider.81@gmail.com'
					}
				}
			}

		}
	}
	repositories {
		maven {
			credentials {
				username ossrhUsername
				password ossrhPassword
			}
			if (project.version.endsWith("-SNAPSHOT")) {
				url "https://oss.sonatype.org/content/repositories/snapshots/"
			} else {
				url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
			}
		}
	}
}

signing {
	sign publishing.publications.maven
}

// Example to configure HTML report
spotbugsMain {
	reports {
		html {
			enabled = true
			destination = file("$buildDir/reports/spotbugs/main/spotbugs.html")
			stylesheet = 'fancy-hist.xsl'
		}
	}
}

spotbugsTest {
	reports {
		html {
			enabled = true
			destination = file("$buildDir/reports/spotbugs/test/spotbugs.html")
			stylesheet = 'fancy-hist.xsl'
		}
	}
}



